--- a/.github/workflows/github-actions-experiment.yml
+++ b/.github/workflows/github-actions-experiment.yml
@@ -5,5 +5,6 @@ jobs:
   build-datashield-base-image:
     runs-on: ubuntu-latest
     steps:
-      using: 'docker'
+      - name: Build docker Image
+        using: 'docker'
       image: 'Dockerfile'
