--- a/.github/workflows/github-actions-experiment.yml
+++ b/.github/workflows/github-actions-experiment.yml
@@ -8,5 +8,5 @@ jobs:
     steps:
       - name: Build Base Client Docker Image
         run: docker build -t datashield/githubactions-dsclient-base:latest --file dsClient_Dockerfile .
-        run: echo $DOCKER_PASS | docker login -u $DOCKER_USER --password-stdin
+        run: echo ${{ dockerhub.password }} | docker login -u ${{ dockerhub.user }} --password-stdin
         run: docker push datashield/githubsactions-dsclient-base:latest
