--- a/.github/workflows/github-actions-experiment.yml
+++ b/.github/workflows/github-actions-experiment.yml
@@ -4,12 +4,12 @@ on: [push]
 jobs:
   build-datashield-base-image:
     runs-on: ubuntu-latest
-    name: Build Docker Images
     steps:
-      - uses: docker/setup-buildx-action@3
-      - name: Build Base Client Docker Image, stage 1
-      - run: docker build -t datashield/githubactions-dsclient-base:latest --file dsClient_Dockerfile .
-      - name: Build Base Client Docker Image, stage 2
-      - run: echo ${{ dockerhub.password }} | docker login -u ${{ dockerhub.user }} --password-stdin
-      - name: Build Base Client Docker Image, stage 3
-      - run: docker push datashield/githubsactions-dsclient-base:latest
+      - name: Build Base Client Docker Image
+        uses: docker/setup-push-action@3
+        run: docker build -t datashield/githubactions-dsclient-base:latest --file dsClient_Dockerfile .
+      - name: Build Base Client Docker Image
+        run: echo ${{ dockerhub.password }} | docker login -u ${{ dockerhub.user }} --password-stdin
+      - name: Build Base Client Docker Image
+        uses: docker/setup-push-action@3
+        run: docker push datashield/githubsactions-dsclient-base:latest
