--- a/.github/workflows/github-actions-experiment.yml
+++ b/.github/workflows/github-actions-experiment.yml
@@ -5,7 +5,7 @@ jobs:
   build-datashield-base-image:
     runs-on: ubuntu-latest
     steps:
-      - uses: docker/setup-push-action@3
-      - uses: docker/setup-push-action@3
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/build-push-action@v6
       - run: docker build -t datashield/githubactions-dsclient-base:latest --file dsClient_Dockerfile .
       - run: docker push datashield/githubsactions-dsclient-base:latest
