--- a/.github/workflows/github-actions-experiment.yml
+++ b/.github/workflows/github-actions-experiment.yml
@@ -7,5 +7,6 @@ jobs:
     steps:
       - uses: docker/setup-buildx-action@v3
       - uses: docker/build-push-action@v6
+      - run: pwd
       - run: docker build -t datashield/githubactions-dsclient-base:latest --file dsClient_Dockerfile .
       - run: docker push datashield/githubsactions-dsclient-base:latest
